@@ -3,7 +3,7 @@
  * :tabSize=8:indentSize=8:noTabs=false:
  * :folding=explicit:collapseFolds=1:
  *
- * Copyright (C) 2000, 2001, 2002 Slava Pestov
+ * Copyright (C) 2000, 2003 Slava Pestov
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -49,11 +49,6 @@ public class KeyEventWorkaround
 			// get rid of keys we never need to handle
 			switch(keyCode)
 			{
-			case KeyEvent.VK_ALT:
-			case KeyEvent.VK_ALT_GRAPH:
-			case KeyEvent.VK_CONTROL:
-			case KeyEvent.VK_SHIFT:
-			case KeyEvent.VK_META:
 			case KeyEvent.VK_DEAD_GRAVE:
 			case KeyEvent.VK_DEAD_ACUTE:
 			case KeyEvent.VK_DEAD_CIRCUMFLEX:
@@ -72,25 +67,48 @@ public class KeyEventWorkaround
 			case KeyEvent.VK_DEAD_SEMIVOICED_SOUND:
 			case '\0':
 				return null;
+			case KeyEvent.VK_ALT:
+				modifiers |= InputEvent.ALT_MASK;
+				return null;
+			case KeyEvent.VK_ALT_GRAPH:
+				modifiers |= InputEvent.ALT_GRAPH_MASK;
+				return null;
+			case KeyEvent.VK_CONTROL:
+				modifiers |= InputEvent.CTRL_MASK;
+				return null;
+			case KeyEvent.VK_SHIFT:
+				modifiers |= InputEvent.SHIFT_MASK;
+				return null;
+			case KeyEvent.VK_META:
+				modifiers |= InputEvent.META_MASK;
+				return null;
 			default:
 				switch(keyCode)
 				{
-					case KeyEvent.VK_NUMPAD0:   case KeyEvent.VK_NUMPAD1:
-					case KeyEvent.VK_NUMPAD2:   case KeyEvent.VK_NUMPAD3:
-					case KeyEvent.VK_NUMPAD4:   case KeyEvent.VK_NUMPAD5:
-					case KeyEvent.VK_NUMPAD6:   case KeyEvent.VK_NUMPAD7:
-					case KeyEvent.VK_NUMPAD8:   case KeyEvent.VK_NUMPAD9:
-					case KeyEvent.VK_MULTIPLY:  case KeyEvent.VK_ADD:
-					/* case KeyEvent.VK_SEPARATOR: */ case KeyEvent.VK_SUBTRACT:
-					case KeyEvent.VK_DECIMAL:   case KeyEvent.VK_DIVIDE:
+					case KeyEvent.VK_NUMPAD0:
+					case KeyEvent.VK_NUMPAD1:
+					case KeyEvent.VK_NUMPAD2:
+					case KeyEvent.VK_NUMPAD3:
+					case KeyEvent.VK_NUMPAD4:
+					case KeyEvent.VK_NUMPAD5:
+					case KeyEvent.VK_NUMPAD6:
+					case KeyEvent.VK_NUMPAD7:
+					case KeyEvent.VK_NUMPAD8:
+					case KeyEvent.VK_NUMPAD9:
+					case KeyEvent.VK_MULTIPLY:
+					case KeyEvent.VK_ADD:
+					/* case KeyEvent.VK_SEPARATOR: */
+					case KeyEvent.VK_SUBTRACT:
+					case KeyEvent.VK_DECIMAL:
+					case KeyEvent.VK_DIVIDE:
 						last = LAST_NUMKEYPAD;
 						lastKeyTime = System.currentTimeMillis();
 						return evt;
 				}
 
-				if(!(evt.isControlDown()
-					|| evt.isAltDown()
-					|| evt.isMetaDown()))
+				if((modifiers & (InputEvent.CTRL_MASK
+					| InputEvent.ALT_MASK
+					| InputEvent.META_MASK)) == 0)
 				{
 					if(keyCode >= KeyEvent.VK_0
 						&& keyCode <= KeyEvent.VK_9)
@@ -105,17 +123,16 @@ public class KeyEventWorkaround
 					}
 				}
 
-				if(!OperatingSystem.isMacOS())
-					handleBrokenKeys(evt,keyCode);
-				else
+				if(OperatingSystem.isMacOS())
 				{
 					/* we don't handle key pressed A+ */
 					/* they're too troublesome */
-					if(evt.isAltDown())
+					if((modifiers & InputEvent.ALT_MASK) != 0)
 						return null;
 
 					last = LAST_NOTHING;
 				}
+
 				break;
 			}
 
@@ -132,33 +149,16 @@ public class KeyEventWorkaround
 			// user input
 			if(OperatingSystem.isMacOS())
 			{
-				if(evt.isControlDown() || evt.isMetaDown())
+				if((modifiers & (InputEvent.CTRL_MASK
+					| InputEvent.META_MASK)) != 0)
 					return null;
 			}
 			else
 			{
-				if((evt.isControlDown() ^ evt.isAltDown())
-					|| evt.isMetaDown())
+				if((modifiers & InputEvent.CTRL_MASK) != 0
+					^ (modifiers & InputEvent.ALT_MASK) != 0
+					|| (modifiers & InputEvent.META_MASK) != 0)
 					return null;
-			}
-
-			// On JDK 1.4 with Windows, some Alt-key sequences send
-			// bullshit in a KEY_TYPED afterwards. We filter it out
-			// here
-			if(last == LAST_MOD)
-			{
-				switch(ch)
-				{
-				case 'B':
-				case 'M':
-				case 'X':
-				case 'c':
-				case '!':
-				case ',':
-				case '?':
-					last = LAST_NOTHING;
-					return null;
-				}
 			}
 
 			// if the last key was a numeric keypad key
@@ -174,33 +174,28 @@ public class KeyEventWorkaround
 					return null;
 				}
 			}
-			// if the last key was a broken key, filter
-			// out all except 'a'-'z' that occur 750 ms after.
-			else if(last == LAST_BROKEN && System.currentTimeMillis()
-				- lastKeyTime < 750 && !Character.isLetter(ch))
-			{
-				last = LAST_NOTHING;
-				return null;
-			}
-			// otherwise, if it was ALT, filter out everything.
-			else if(last == LAST_ALT && System.currentTimeMillis()
-				- lastKeyTime < 750)
-			{
-				last = LAST_NOTHING;
-				return null;
-			}
 
 			return evt;
 		//}}}
 		//{{{ KEY_RELEASED...
 		case KeyEvent.KEY_RELEASED:
-			if(keyCode == KeyEvent.VK_ALT)
+			switch(keyCode)
 			{
-				// bad workaround... on Windows JDK 1.4, some
-				// Alt-sequences generate random crap afterwards
-				if(OperatingSystem.isWindows()
-					&& OperatingSystem.hasJava14())
-					last = LAST_MOD;
+			case KeyEvent.VK_ALT:
+				modifiers &= ~InputEvent.ALT_MASK;
+				return null;
+			case KeyEvent.VK_ALT_GRAPH:
+				modifiers &= ~InputEvent.ALT_GRAPH_MASK;
+				return null;
+			case KeyEvent.VK_CONTROL:
+				modifiers &= ~InputEvent.CTRL_MASK;
+				return null;
+			case KeyEvent.VK_SHIFT:
+				modifiers &= ~InputEvent.SHIFT_MASK;
+				return null;
+			case KeyEvent.VK_META:
+				modifiers &= ~InputEvent.META_MASK;
+				return null;
 			}
 			return evt;
 		//}}}
@@ -220,9 +215,9 @@ public class KeyEventWorkaround
 	} //}}}
 
 	//{{{ Private members
-
-	//{{{ Static variables
 	private static long lastKeyTime;
+
+	private static int modifiers;
 
 	private static int last;
 	private static final int LAST_NOTHING = 0;
@@ -230,44 +225,5 @@ public class KeyEventWorkaround
 	private static final int LAST_BROKEN = 2;
 	private static final int LAST_NUMKEYPAD = 3;
 	private static final int LAST_MOD = 4;
-	//}}}
-
-	//{{{ handleBrokenKeys() method
-	private static void handleBrokenKeys(KeyEvent evt, int keyCode)
-	{
-		if(evt.isAltDown() && evt.isControlDown()
-			&& !evt.isMetaDown())
-		{
-			last = LAST_NOTHING;
-			return;
-		}
-		else if(!(evt.isAltDown() || evt.isControlDown() || evt.isMetaDown()))
-		{
-			last = LAST_NOTHING;
-			return;
-		}
-
-		if(evt.isAltDown())
-			last = LAST_ALT;
-
-		switch(keyCode)
-		{
-			case KeyEvent.VK_LEFT:      case KeyEvent.VK_RIGHT:
-			case KeyEvent.VK_UP:        case KeyEvent.VK_DOWN:
-			case KeyEvent.VK_DELETE:    case KeyEvent.VK_BACK_SPACE:
-			case KeyEvent.VK_TAB:       case KeyEvent.VK_ENTER:
-				last = LAST_NOTHING;
-				break;
-			default:
-				if(keyCode < KeyEvent.VK_A || keyCode > KeyEvent.VK_Z)
-					last = LAST_BROKEN;
-				else
-					last = LAST_NOTHING;
-				break;
-		}
-
-		lastKeyTime = System.currentTimeMillis();
-	} //}}}
-
 	//}}}
 }
